Upload APIs completed